addons/debugger/style.css
@import url("../editor-theme3/compatibility.css");

[dir="ltr"] .sa-debugger-container {
  margin-right: 0.2rem;
}

[dir="rtl"] .sa-debugger-container {
  margin-left: 0.2rem;
}

.sa-small-stage [class*="gui_body-wrapper_"]:not(.sa-stage-hidden) .sa-debugger-container {
  display: none !important;
}

.sa-debugger-container [class*="button_content_"] {
  position: relative;
}

.sa-debugger-unread::after {
  content: "";
  position: absolute;
  top: 1px;
  right: 0;
  display: block;
  width: 6px;
  height: 6px;
  background-color: var(--editorDarkMode-highlightText, #855cd6);
  border-radius: 50%;
}

.sa-debugger-interface {
  display: none;
  position: absolute;
  z-index: 492;
  background-color: white;
  width: 540px;
  height: 25rem;
  resize: auto;
  min-width: 300px;
  min-height: 200px;
}

.sa-debugger-interface [class*="card_header-buttons_"] {
  background-color: #29beb8;
  border-color: #3aa8a4;
}

.sa-debugger-interface h1 {
  padding: 10px;
  z-index: 10;
  width: calc(100% - 20px);
  font-size: 20px;
}

.sa-debugger-tabs {
  margin: 0;
  display: flex;
  align-items: center;
  align-content: center;
  flex-wrap: wrap;
  gap: 10px;
  padding: 8px 15px;
  padding-right: 0px;
  font-size: 0.75rem;
}

.sa-debugger-tabs li {
  margin: 0;
  display: flex;
  align-items: center;
  padding: 0.5em 1em;
  background-color: rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.15);
  border-radius: 1rem;
  color: white;
  cursor: pointer;
  font-weight: bold;
}
.sa-debugger-tabs li:hover {
  background-color: rgba(0, 0, 0, 0.15);
}
.sa-debugger-tabs li.sa-debugger-tab-selected {
  background-color: white;
  background-clip: padding-box;
  border-color: rgba(0, 0, 0, 0.25);
  color: #855cd6;
}
.sa-debugger-tabs li img {
  margin: 0;
  margin-right: 0.25rem;
  width: 1rem;
  height: 1rem;
  filter: brightness(0) invert(1);
}
.sa-debugger-tabs li.sa-debugger-tab-selected img {
  filter: none;
}

.sa-debugger-header-buttons [class*="modal_header-item-close"] {
  padding: 0 13px 0 0;
}

.sa-debugger-footer {
  border-top: 1px solid var(--editorDarkMode-border, rgba(0, 0, 0, 0.15));
  display: flex;
  justify-content: center;
  padding: 8px 15px;
  width: 100%;
  box-sizing: border-box;
  cursor: auto;
}

.sa-debugger-footer-buttons {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 10px;
}

.sa-debugger-footer-buttons [class*="card_shrink-expand-button"] {
  background-color: #29beb8;
  font-weight: bold;
  border-radius: 4px;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 0.4rem 0.7rem;
  color: white;
  cursor: pointer;
  gap: 4px;
  font-size: 12px;
}

.sa-debugger-footer-buttons [class*="card_shrink-expand-button"]:hover {
  background-color: #3aa8a4;
}

.sa-debugger-footer-buttons img {
  width: 16px;
  height: 16px;
}

.sa-debugger-unpause-container {
  display: flex;
  align-items: center;
}

.sa-debugger-unpause-container:not(:last-child) {
  border-right: 1px solid var(--editorDarkMode-border, rgba(0, 0, 0, 0.15));
  padding-right: 10px;
}

.sa-debugger-unpause {
  animation: saBorderPulse 1.5s ease-in-out infinite alternate;
}

@keyframes saBorderPulse {
  0% {
    box-shadow: 0 0 0 4px rgb(41 190 184 / 0%);
  }
  100% {
    box-shadow: 0 0 0 4px rgb(41 190 184 / 35%);
  }
}

.sa-debugger-tab-content {
  width: 100%;
  height: 100%;
  overflow: auto;
  cursor: auto;
}

.sa-debugger-chart {
  width: 100%;
  height: 100%;
}

.sa-performance-tab-content {
  padding: 15px;
}

.sa-debugger-log-outer {
  height: 100%;
}

.sa-debugger-log-inner {
  position: relative;
  overflow-y: auto;
  font-size: 12px;
  line-height: 1.2;
  height: 100%;
  contain: strict;
}

.sa-debugger-log-empty {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  font-size: 20px;
  font-style: italic;
}

.sa-debugger-log-end {
  position: absolute;
  top: 0;
  left: 0;
  width: 1px;
  height: 1px;
}

.sa-debugger-log {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 20px;
  box-sizing: border-box;
  display: flex;
  align-items: center;
  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
  padding-left: 4px;
  font-family: monospace;
}
.sa-debugger-log[data-type="warn"] {
  border-color: hsl(38deg, 100%, 80%);
  color: hsl(38deg 100% 18%);
  background-color: hsl(38deg 100% 95%);
}
.sa-debugger-log[data-type="error"] {
  border-color: hsl(20deg 100% 85%);
  color: hsl(20deg 100% 45%);
  background-color: hsl(20deg 100% 95%);
}

.sa-debugger-log-repeats {
  background-color: #29beb8;
  color: white;
  border-radius: 100px;
  padding: 1px 6px;
  margin-right: 4px;
}

.sa-debugger-log-icon {
  width: 16px;
  height: 16px;
  margin-right: 4px;
}
[data-type="warn"] .sa-debugger-log-icon {
  background-image: url(./icons/warning.svg);
}
[data-type="error"] .sa-debugger-log-icon {
  background-image: url(./icons/error.svg);
}
.sa-debugger-threads .sa-debugger-log-icon {
  background-image: url(./icons/subthread.svg);
}

.sa-debugger-log-link {
  color: inherit;
  cursor: pointer;
  opacity: 0.5;
  text-decoration: underline;
  float: right;
  text-align: right;
  max-width: 100%;
  padding-left: 4px;
  margin-right: 4px;
  margin-left: auto;
}
.sa-debugger-log-link:hover {
  text-decoration: underline;
  color: #855cd6;
  opacity: 1;
}
.sa-debugger-log-link-unknown {
  pointer-events: none;
}

.sa-debugger-log-text {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: pre;
}
.sa-debugger-log-text-empty {
  font-style: italic;
}
.sa-debugger-log-internal .sa-debugger-log-text {
  font-style: italic;
}

.sa-debugger-thread-indent {
  width: calc(16px * var(--level));
  margin-right: 4px;
}
.sa-debugger-thread-title .sa-debugger-thread-indent {
  margin: 0;
}
.sa-debugger-thread-target-name {
  font-weight: bold;
  margin-right: 8px;
}
.sa-debugger-thread-running {
  background-color: rgba(255, 187, 0, 0.233);
  font-weight: bold;
}

.sa-debugger-block-preview {
  padding: 1px 6px;
  margin-right: 4px;
  background-color: var(--sa-block-colored-background);
  color: var(--sa-block-text);
}
.sa-debugger-block-preview[data-shape="round"] {
  border-radius: 100px;
}
.sa-debugger-block-preview[data-shape="stacked"] {
  border-radius: 3px;
}

.sa-timing-timer {
  position: absolute;
  top: 0px;
  width: 100%;
  box-sizing: border-box;
  display: flex;
  align-items: center;
  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
  padding-left: 4px;
  font-family: monospace;
  justify-content: space-around;
  padding-top: 2px;
  padding-bottom: 2px;
}

.sa-timing-content {
  display: flex;
  flex-direction: column;
  height: 100%; /* Ensure the parent has a specific height */
}

.sa-timing-content .sa-debugger-log-outer {
  height: auto;
  flex-grow: 1;
}

.sa-timing-timer > span {
  width: 95px;
  text-align: center;
}

.sa-timing-timer > :first-child {
  width: 100px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.sa-timing-header {
  position: relative;
  font-weight: bold;
}

.sa-timing-header span {
  cursor: pointer;
}

.sa-timing-header span.active-header {
  font-weight: bold;
  color: #855cd6;
}

.sa-timing-disabled {
  opacity: 0.5;
  cursor: not-allowed !important;
}

.sa-timing-content .sa-debugger-block-preview {
  width: 100px;
  text-wrap: nowrap;
  text-align: center;
}

/* Tooltip container (the second item) */
.sa-timing-tooltip-container {
  position: relative;
  display: inline-block;
}

/* invisible container to use as a hit box */
.sa-timing-tooltip-outer {
  visibility: hidden;
  position: absolute;
  transform: translate(-25%, 96px);
  padding-top: 22px;
  cursor: default;
}

/* Tooltip content (hidden by default, positioned above the container) */
.sa-timing-tooltip-content {
  background-color: #f9f9f9;
  border: 1px solid #ccc;
  padding: 10px;
  z-index: 1000;
  width: 240px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  border-radius: 8px;
  text-align: center;
  position: relative;
}

/* Tooltip content text */
.sa-timing-tooltip-content p {
  font-size: 14px;
  color: #333;
  margin: 0;
}

/* Tooltip image placeholder */
.sa-timing-tooltip-image {
  display: block;
  margin-top: 10px;
  width: 100%;
  height: auto;
}

/* Tooltip arrow */
.sa-timing-tooltip-content::before {
  content: "";
  position: absolute;
  top: -11px;
  left: 50%;
  transform: translateX(-50%) rotate(45deg);
  width: 20px;
  height: 20px;
  background: inherit;
  border-left: 1px solid #ccc;
  border-top: 1px solid #ccc;
  z-index: -1;
}

/* Show tooltip when hovering over the container */
.sa-timing-tooltip-container:hover .sa-timing-tooltip-outer,
.sa-timing-tooltip-outer:hover {
  visibility: visible;
}

.sa-timing-tooltip-content a {
  pointer-events: auto;
}

/* Shared checkbox styles for timing controls */

.sa-timing-checkbox {
  margin-left: 4px;
  cursor: pointer;
  transform: scale(1.2);
  appearance: none;
  -webkit-appearance: none;
  width: 12px;
  height: 12px;
  background-color: white;
  border: none;
  border-radius: 2px;
}

.sa-timing-checkbox:checked {
  background-color: white;
  position: relative;
}

.sa-timing-checkbox:checked::after {
  content: "";
  position: absolute;
  left: 3.75px;
  top: 1px;
  width: 3px;
  height: 6px;
  border: solid #29beb8;
  border-width: 0 2px 2px 0;
  transform: rotate(45deg);
}

